--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -3,5 +3,5 @@
     font-weight: bold;
     text-align: center;
     padding:10px;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
 }
